// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`animal@2 golden output > flat art, E (spread): mesh and drawing are unchanged 1`] = `
{
  "chinDropPx": 62.95,
  "drawCalls": 31878,
  "drawing": "8c73f0058f9c3a23",
  "lipGapPx": 82.45,
  "mesh": "4a59aee157ac55ad",
}
`;

exports[`animal@2 golden output > flat art, FF: mesh and drawing are unchanged 1`] = `
{
  "chinDropPx": 13.51,
  "drawCalls": 31878,
  "drawing": "6717ca62a26db8b8",
  "lipGapPx": 17.88,
  "mesh": "824921ffa1255cf8",
}
`;

exports[`animal@2 golden output > flat art, TH, tongue up: mesh and drawing are unchanged 1`] = `
{
  "chinDropPx": 31.83,
  "drawCalls": 31878,
  "drawing": "dae6e5bcc17494a5",
  "lipGapPx": 40.55,
  "mesh": "af0958e534ff84f1",
}
`;

exports[`animal@2 golden output > flat art, aa (open): mesh and drawing are unchanged 1`] = `
{
  "chinDropPx": 100.5,
  "drawCalls": 31878,
  "drawing": "7a2b1c4ecb29e7b5",
  "lipGapPx": 126.24,
  "mesh": "82cd63b50d8eb967",
}
`;

exports[`animal@2 golden output > flat art, blink full: mesh and drawing are unchanged 1`] = `
{
  "chinDropPx": 0,
  "drawCalls": 31918,
  "drawing": "82f5b957fa6e1096",
  "lipGapPx": 0.83,
  "mesh": "a21d4cdd609de678",
}
`;

exports[`animal@2 golden output > flat art, oh (rounded): mesh and drawing are unchanged 1`] = `
{
  "chinDropPx": 73.97,
  "drawCalls": 31878,
  "drawing": "6bcf80a5df17d8d3",
  "lipGapPx": 93.08,
  "mesh": "4065c68dbecd130d",
}
`;

exports[`animal@2 golden output > flat art, rest: mesh and drawing are unchanged 1`] = `
{
  "chinDropPx": 0,
  "drawCalls": 31804,
  "drawing": "064b5cb7cdc3dc1e",
  "lipGapPx": 0.83,
  "mesh": "a21d4cdd609de678",
}
`;

exports[`animal@2 golden output > render, E (spread): mesh and drawing are unchanged 1`] = `
{
  "chinDropPx": 62.95,
  "drawCalls": 31951,
  "drawing": "815b87935a98b574",
  "lipGapPx": 82.45,
  "mesh": "4a59aee157ac55ad",
}
`;

exports[`animal@2 golden output > render, FF: mesh and drawing are unchanged 1`] = `
{
  "chinDropPx": 13.51,
  "drawCalls": 31951,
  "drawing": "a97925659642b008",
  "lipGapPx": 17.88,
  "mesh": "824921ffa1255cf8",
}
`;

exports[`animal@2 golden output > render, TH, tongue up: mesh and drawing are unchanged 1`] = `
{
  "chinDropPx": 31.83,
  "drawCalls": 31951,
  "drawing": "c12af65315dc2561",
  "lipGapPx": 40.55,
  "mesh": "af0958e534ff84f1",
}
`;

exports[`animal@2 golden output > render, aa (open): mesh and drawing are unchanged 1`] = `
{
  "chinDropPx": 100.5,
  "drawCalls": 31951,
  "drawing": "e055282bf320c5c6",
  "lipGapPx": 126.24,
  "mesh": "82cd63b50d8eb967",
}
`;

exports[`animal@2 golden output > render, blink full: mesh and drawing are unchanged 1`] = `
{
  "chinDropPx": 0,
  "drawCalls": 31984,
  "drawing": "7e17436a36813364",
  "lipGapPx": 0.83,
  "mesh": "a21d4cdd609de678",
}
`;

exports[`animal@2 golden output > render, oh (rounded): mesh and drawing are unchanged 1`] = `
{
  "chinDropPx": 73.97,
  "drawCalls": 31951,
  "drawing": "ecedf2efca49f1a3",
  "lipGapPx": 93.08,
  "mesh": "4065c68dbecd130d",
}
`;

exports[`animal@2 golden output > render, rest: mesh and drawing are unchanged 1`] = `
{
  "chinDropPx": 0,
  "drawCalls": 31804,
  "drawing": "064b5cb7cdc3dc1e",
  "lipGapPx": 0.83,
  "mesh": "a21d4cdd609de678",
}
`;

exports[`toon@1 golden output > flat art, E (spread): mesh and drawing are unchanged 1`] = `
{
  "chinDropPx": 55.37,
  "drawCalls": 31922,
  "drawing": "c959a3803766479b",
  "lipGapPx": 73,
  "mesh": "49e20356bec49b07",
}
`;

exports[`toon@1 golden output > flat art, FF: mesh and drawing are unchanged 1`] = `
{
  "chinDropPx": 11.85,
  "drawCalls": 31922,
  "drawing": "91e26cb3dea7cd4b",
  "lipGapPx": 15.81,
  "mesh": "224af7a033a59617",
}
`;

exports[`toon@1 golden output > flat art, TH, tongue up: mesh and drawing are unchanged 1`] = `
{
  "chinDropPx": 27.7,
  "drawCalls": 31922,
  "drawing": "ee099faba433fea8",
  "lipGapPx": 35.39,
  "mesh": "2084365dba891f23",
}
`;

exports[`toon@1 golden output > flat art, aa (open): mesh and drawing are unchanged 1`] = `
{
  "chinDropPx": 87.41,
  "drawCalls": 31922,
  "drawing": "812e3a4154d97244",
  "lipGapPx": 109.91,
  "mesh": "2a60984d94202c64",
}
`;

exports[`toon@1 golden output > flat art, blink full: mesh and drawing are unchanged 1`] = `
{
  "chinDropPx": 0,
  "drawCalls": 31918,
  "drawing": "82f5b957fa6e1096",
  "lipGapPx": 0.83,
  "mesh": "a21d4cdd609de678",
}
`;

exports[`toon@1 golden output > flat art, oh (rounded): mesh and drawing are unchanged 1`] = `
{
  "chinDropPx": 64.32,
  "drawCalls": 31922,
  "drawing": "4ba99d4ce8763fc9",
  "lipGapPx": 81.05,
  "mesh": "7371442ac2267393",
}
`;

exports[`toon@1 golden output > flat art, rest: mesh and drawing are unchanged 1`] = `
{
  "chinDropPx": 0,
  "drawCalls": 31804,
  "drawing": "064b5cb7cdc3dc1e",
  "lipGapPx": 0.83,
  "mesh": "a21d4cdd609de678",
}
`;

exports[`toon@1 golden output > render, E (spread): mesh and drawing are unchanged 1`] = `
{
  "chinDropPx": 55.37,
  "drawCalls": 32008,
  "drawing": "c8ed926edc90440b",
  "lipGapPx": 73,
  "mesh": "49e20356bec49b07",
}
`;

exports[`toon@1 golden output > render, FF: mesh and drawing are unchanged 1`] = `
{
  "chinDropPx": 11.85,
  "drawCalls": 32008,
  "drawing": "58fe9dd58ac4f3ce",
  "lipGapPx": 15.81,
  "mesh": "224af7a033a59617",
}
`;

exports[`toon@1 golden output > render, TH, tongue up: mesh and drawing are unchanged 1`] = `
{
  "chinDropPx": 27.7,
  "drawCalls": 32008,
  "drawing": "f123812f8f60d5f0",
  "lipGapPx": 35.39,
  "mesh": "2084365dba891f23",
}
`;

exports[`toon@1 golden output > render, aa (open): mesh and drawing are unchanged 1`] = `
{
  "chinDropPx": 87.41,
  "drawCalls": 32008,
  "drawing": "bdc8ddd29af6703d",
  "lipGapPx": 109.91,
  "mesh": "2a60984d94202c64",
}
`;

exports[`toon@1 golden output > render, blink full: mesh and drawing are unchanged 1`] = `
{
  "chinDropPx": 0,
  "drawCalls": 31984,
  "drawing": "7e17436a36813364",
  "lipGapPx": 0.83,
  "mesh": "a21d4cdd609de678",
}
`;

exports[`toon@1 golden output > render, oh (rounded): mesh and drawing are unchanged 1`] = `
{
  "chinDropPx": 64.32,
  "drawCalls": 32008,
  "drawing": "59a2d3dae9516ae3",
  "lipGapPx": 81.05,
  "mesh": "7371442ac2267393",
}
`;

exports[`toon@1 golden output > render, rest: mesh and drawing are unchanged 1`] = `
{
  "chinDropPx": 0,
  "drawCalls": 31804,
  "drawing": "064b5cb7cdc3dc1e",
  "lipGapPx": 0.83,
  "mesh": "a21d4cdd609de678",
}
`;
